--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -42,6 +42,9 @@
 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2255488648162796"
      crossorigin="anonymous"></script>
+
+
+     <script async src="https://fundingchoicesmessages.google.com/i/pub-2255488648162796?ers=1" nonce="mPAiZ63CO-1KInWnQDOKdg"></script><script nonce="mPAiZ63CO-1KInWnQDOKdg">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
 </head>
 
 <body>
@@ -58,7 +61,7 @@
                         <nav>
                             <ul>
                                 <!-- <li class="mil-has-children">
-                                    <a href="#.">Services</a>
+                                    <a href="{% url 'contactus' %}">Services</a>
                                     <ul>
                                         <li><a href="{% url 'contactus' %}">AI/ML</a></li>
                                         <li><a href="{% url 'contactus' %}">Website Development</a></li>
@@ -191,8 +194,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class="mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d2Vic2l0ZSUyMGRldmVsb3BtZW50fGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -205,8 +208,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class="mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1562577309-2592ab84b1bc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8c2VvfGVufDB8fDB8fHww" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -219,8 +222,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class="mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1521302200778-33500795e128?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8eW91dHViZXxlbnwwfHwwfHx8MA%3D%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -235,8 +238,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class=" mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1512415031623-5c8392938dc4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8cGF5JTIwcGVyJTIwY2xpY2t8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%;  border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -249,8 +252,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class="mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1631427962232-803d4f30c64f?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGNoYXQlMjBib3R8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -264,8 +267,8 @@
                         <div class="mil-divider mil-divider-left"></div>
                         <div class="mil-service-item">
                             <div class="mil-service-icon">
-                                <div class="mil-icon-frame mil-icon-frame-md">
-                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 150px; height: 120px; margin-top: 120px; border-radius: 15px;" alt="icon">
+                                <div class="mil-icon-frame-md" style="margin: 25px;">
+                                    <img src="https://images.unsplash.com/photo-1622549037543-49cf1ca0babc?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c29jaWFsJTIwbWVkaWElMjBtYXJrZXRpbmd8ZW58MHx8MHx8fDA%3D" style="width: 100%; height: 100%; border-radius: 15px;" class="img-fluid" alt="icon">
                                 </div>
                             </div>
                             <div class="mil-service-text">
@@ -309,15 +312,15 @@
 
                 <div class="swiper-container mil-works-slider mil-mb-90">
                     <div class="swiper-wrapper">
+                        {% for i in port %}
                         <div class="swiper-slide">
-
-                            <a href="https://jaspo.shop/" class="mil-card">
+                            <a href="{% url 'portfoliodetail' i.slug %}" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="{% static 'images/jaspohome.png' %}" alt="project">
+                                    <img src="{{i.img}}" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">We are expert in creating E-commerce Website.</h4>
+                                        <h4 class="mil-mb-20">{{i.name}}</h4>
                                         <h6>by: <span class="mil-accent">coding India</span></h6>
                                     </div>
                                     <div class="mil-card-text">
@@ -325,74 +328,16 @@
                                     </div>
                                 </div>
                             </a>
-
                         </div>
-                        <div class="swiper-slide">
-
-                            <a href="https://shopwithpreeti.codingindia.co.in/" class="mil-card">
-                                <div class="mil-cover-frame">
-                                    <img src="{% static 'images/affliate.png' %}" alt="project">
-                                </div>
-                                <div class="mil-description">
-                                    <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Easy & Beautiful Affliate Marketing Project.</h4>
-                                        <h6>by: <span class="mil-accent">Coding India</span></h6>
-                                    </div>
-                                    <div class="mil-card-text">
-                                        <p>Learn to make/Order a Affliate Market Website from us. </p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
-                        <div class="swiper-slide">
-
-                            <a href="https://timetravelthroughindia.codingindia.co.in/" class="mil-card">
-                                <div class="mil-cover-frame">
-                                    <img src="{% static 'images/Blogwebsite.png' %}" alt="project">
-                                </div>
-                                <div class="mil-description">
-                                    <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Elegant and Beautiful Blog Webiste on the go.</h4>
-                                        <h6>by: <span class="mil-accent">Codng India</span></h6>
-                                    </div>
-                                    <div class="mil-card-text">
-                                        <p>Create a Blog Website which is beautiful and fast.</p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
-                        <div class="swiper-slide">
-
-                            <a href="#" title="Demo Only... Please Contact" class="mil-card">
-                                <div class="mil-cover-frame">
-                                    <img src="{% static 'images/erp.png' %}" alt="project">
-                                </div>
-                                <div class="mil-description">
-                                    <div class="mil-card-title">
-                                        <h4 class="mil-mb-20">Enterprise Management System.</h4>
-                                        <h6>by: <span class="mil-accent">Coding India</span></h6>
-                                    </div>
-                                    <div class="mil-card-text">
-                                        <p>We are experts in creating ERP management System for your business.</p>
-                                    </div>
-                                </div>
-                            </a>
-
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-6 col-xl-6">
-
-                        <!-- <a href="portfolio.html" class="mil-link mil-mb-30"><span>View All Cases</span><i class="fas fa-arrow-right"></i></a> -->
-
                     </div>
                     <div class="col-md-6 col-xl-6">
-
                         <div class="mil-adaptive-right">
-                            <a href="{% url 'contactus' %}" class="mil-button mil-border mil-mb-30"><span>Get Started</span></a>
+                            <a href="{% url 'portfolio' %}" class="mil-button mil-border mil-mb-30"><span>View More</span></a>
                         </div>
 
                     </div>
@@ -679,7 +624,7 @@
 
                             <div class="mil-checbox-frame mil-mb-60">
                                 <input class="mil-checkbox" id="checkbox-1" type="checkbox" name="agree" value="1" required>
-                                <label for="checkbox-1" class="mil-text-sm mil-light">I would like to be contacted with news and updates about your <a href="#." class="mil-accent">events and services</a></label>
+                                <label for="checkbox-1" class="mil-text-sm mil-light">I would like to be contacted with news and updates about your <a href="{% url 'contactus' %}" class="mil-accent">events and services</a></label>
                             </div>
 
                         </div>
@@ -737,8 +682,8 @@
                 <div class="mil-footer-links">
                     <ul class="mil-social mil-light">
                         <li class="mil-adapt-links"><a href="https://www.instagram.com/codingindia20/">Instagram</a><a href="https://www.instagram.com/codingindia20/">IG</a></li>
-                        <li class="mil-adapt-links"><a href="https://www.linkedin.com/in/digamber-jha-5045221a5/">LinkedIn</a><a href="#.">IN</a></li>
-                        <!-- <li class="mil-adapt-links"><a href="#.">Twitter</a><a href="#.">TW</a></li> -->
+                        <li class="mil-adapt-links"><a href="https://www.linkedin.com/in/digamber-jha-5045221a5/">LinkedIn</a><a href="{% url 'contactus' %}">IN</a></li>
+                        <!-- <li class="mil-adapt-links"><a href="{% url 'contactus' %}">Twitter</a><a href="{% url 'contactus' %}">TW</a></li> -->
                         <li class="mil-adapt-links"><a href="https://www.youtube.com/@CodinIndia">YouTube</a><a href="https://www.youtube.com/@CodinIndia">YT</a></li>
                     </ul>
                     <ul class="mil-additional-links mil-light">
