Working on changes

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -53,7 +53,7 @@
     <div class="mil-wrapper">
         <!-- top bar -->
         <div class="mil-top-position mil-fixed"> 
-            <div class="mil-top-panel mil-top-panel-transparent mil-animated">
+            <div class="mil-top-panel  ">
                 <!-- mil-top-panel-transparent -->
                 <div class="container">
                     <a href="/" class="mil-logo" style="width: 140px"></a>
