--- a/CodingIndia/GenAI/templates/GenAI/index.html
+++ b/CodingIndia/GenAI/templates/GenAI/index.html
@@ -44,16 +44,12 @@
         height: 100vh;
         border: 1px solid red;
     }
-    .col-md-4 form #genaiinput{
-        width: 100%;
-        height: 100vh;
-    }
+
     .chatContainer{
         width: 100%;
-        height: 100vh;
+        height: 72vh;
         
         background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.5)); 
-         /* , url('../../../static/images/2193.jpg'); */
         background-size: 100% 72vh;
         background-repeat: no-repeat;
         padding: 15px;
@@ -88,13 +84,17 @@
         display: inline-block;
     }
     .gensubmit{
-        position: fixed;
-        width: 70%;
-        margin: auto;
-        top: 95%;
-        bottom: 10px;
+        width: 30%;   
         padding: 15px;
-        left: 0;
+        margin: auto auto;
+        border-radius: 15px;
+        background-color: #f5f5f5;
+    }
+    #genaiinput{
+        padding: 35px;
+        width: 100%;
+        border-radius: 30px 34px 30px 35px;
+        margin-top: 15px;
     }
     .loader {
         border: 4px solid rgba(0, 0, 0, 0.1);
@@ -115,7 +115,7 @@
         }
     }
 </style>
-<!-- <div class="gen">
+<div class="gen">
     <div class="container-fluid">
         <div class="box">
             <div class="row">
@@ -124,45 +124,21 @@
                     <form action="" method="post" id="genaiform" name="genaiform" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="chatContainer"><pre style="color:white;">Let's Explore The Power Of Generative AI...</pre></div>
-                        <div class="btns">
-                        <textarea name="geninput" id="genaiinput" placeholder="Enter Your Text Here"></textarea>
-                        <input type="file" name="geninputfile" id="genaiinputfile" />
+                        <div class="btns" style="text-align: center;">
+                            <textarea name="geninput" id="genaiinput" placeholder="Enter Your Text Here"></textarea>
 
-                        <div class="loader" style="display: none;">Loading...</div>
-                        <input type="submit" value="Submit" name="Submit" class="gensubmit">
-                    </div>
+                            <div class="loader" style="display: none;">Loading...</div>
+                            <input type="submit" value="Submit" name="Submit" class="gensubmit">
+                        </div>
                     </form>
                 </div>
                 <div class="col-md-1"></div>
             </div>
         </div>
     </div>
-</div> -->
-
-
-<div class="gen">
-    <div class="container-fluid">
-        <div class="box">
-            <div class="row">
-                <div class="col-md-4" style="flex-grow: 1">
-                    <form action="" method="post" id="genaiform" name="genaiform" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <!-- <div class="chatContainer"><pre style="color:white;">Let's Explore The Power Of Generative AI...</pre></div> -->
-                        <textarea name="geninput" id="genaiinput" placeholder="Enter Your Text Here"></textarea>
-                        <input type="file" name="geninputfile" id="genaiinputfile" />
-
-                        <div class="loader" style="display: none;">Loading...</div>
-                        <input type="submit" value="Submit" name="Submit" class="gensubmit">
-                    </form>
-                </div>
-                <div class="col-md-1" style="flex-grow: 1"></div>
-                <div class="col-md-7" style="flex-grow: 8">
-                    <div class="chatContainer"><pre style="color:white;">Let's Explore The Power Of Generative AI...</pre></div>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
+
+
 
 <script>
 $(document).ready(function() {
@@ -210,3 +186,5 @@ $(document).ready(function() {
 });
 </script>
 {% endblock content %}
+
+
