Working on changes

--- a/CodingIndia/blogs/templates/blogs/readblogs.html
+++ b/CodingIndia/blogs/templates/blogs/readblogs.html
@@ -1,7 +1,7 @@
 {%extends 'website/index.html'%}
 
 {% block title %}
-<title>{{blogs.title}}</title>
+<title>{{blog.title}}</title>
 {% endblock title %}
 
 {% block meta %}
