Working on changes

--- a/CodingIndia/website/templates/website/index.html
+++ b/CodingIndia/website/templates/website/index.html
@@ -60,21 +60,13 @@
                     <div class="mil-navigation">
                         <nav>
                             <ul>
-                                <!-- <li class="mil-has-children">
-                                    <a href="{% url 'contactus' %}">Services</a>
-                                    <ul>
-                                        <li><a href="{% url 'contactus' %}">AI/ML</a></li>
-                                        <li><a href="{% url 'contactus' %}">Website Development</a></li>
-                                        <li><a href="{% url 'contactus' %}">App Development</a></li>
-                                        <li><a href="{% url 'genintro' %}">Gemini AI</a></li>
-                                    </ul>
-                                </li> -->
                                 <li><a href="{% url 'blogs_index' %}">Blogs</a></li>
                                 <li><a href="{% url 'genintro' %}">Power AI</a></li>
+                                <li><a href="{% url 'urlshortner' %}">Url Shortner</a></li>
                                 <li><a href="https://www.youtube.com/@CodinIndia">Video Tutorial</a></li>
                                 <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
                                 <li><a href="{% url 'aboutus' %}">About Us</a></li>
-                                <li><a href="{% url 'contactus' %}">Contact Us</a></li>
+                                <li><a href="{% url 'contactus' %}">Contact Us</a></li>   
                             </ul>
                             <div class="mil-search-icon">
                                 <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
