Working on changes

--- a/CodingIndia/Registration/templates/Registration/signinotp.html
+++ b/CodingIndia/Registration/templates/Registration/signinotp.html
@@ -65,7 +65,7 @@
 
 <body class="bg-black">
   <div class="container-fluid text-center mt-2">
-    <img src="{% static 'img/{% static 'img/archit sir.png' %}' %}" class="img-fluid" alt="logo" style="width: 5em; height: 5em" />
+    <img src="{% static 'img/archit sir.png' %}" class="img-fluid" alt="logo" style="width: 5em; height: 5em" />
   </div>
 
   <div class="container-fluid mt-3 mb-3">
@@ -75,7 +75,7 @@
             border: 1px solid rgb(187, 187, 187);
             border-radius: 10px;
             padding: 1em 1em 1em;
-          ">
+        ">
         <h3 style="color: white">ENTER OTP</h3>
 
           <div class="col-sm-12 mb-3">
