--- a/CodingIndia/Registration/templates/Registration/Signup.html
+++ b/CodingIndia/Registration/templates/Registration/Signup.html
@@ -262,6 +262,13 @@
               <input type="text" name="username" required autocomplete="off" />
             </div>
 
+            <!-- <div class="field-wrap">
+              <label>
+                Phone<span class="req">*</span>
+              </label>
+              <input type="tel" name="phone" required autocomplete="off" />
+            </div> -->
+
             <div class="field-wrap">
               <label>
                 Email Address<span class="req">*</span>
@@ -283,7 +290,7 @@
               <input type="password" name="password2" required autocomplete="off" />
             </div>
 
-            <button type="submit" class="button button-block" />Get Started</button>
+            <input type="submit" class="button button-block" value="Get Started" />
 
           </form>
 
