--- a/CodingIndia/UrlShortner/templates/UrlShortner/index.html
+++ b/CodingIndia/UrlShortner/templates/UrlShortner/index.html
@@ -6,6 +6,8 @@
 
 
 {% block content %}
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <style>
     body {
         font-family: sans-serif;
@@ -47,8 +49,35 @@
         <form action="{% url 'createshorturl' %}" method="post" style="margin: 25px;">
             {% csrf_token %}
             <input type="text" name="url" placeholder="Enter a long URL">
+            <input type="hidden" name="foruser" value="{{user.username}}">
+
             <input type="submit" value="Shorten">
         </form>
     </div>
 
+    <section>
+        <div class="container">
+            <h2>Your Urls</h2>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Short Url</th>
+                    <th scope="col">Date Created</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in data %}
+                  <tr>
+                    <th scope="row">{{forloop.counter}}</th>
+                    <td><a href="{% url 'redirect_to_long_url' i.short_key %}">{{i.short_key}}</a></td>
+                    <td>{{i.on_date}}</td>
+                    <td><a href="{% url 'deleteurl' i.short_key' %}"></a></td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+                
+        </div>
+    </section>
 {% endblock content %}
