--- a/CodingIndia/Registration/templates/Registration/Signup.html
+++ b/CodingIndia/Registration/templates/Registration/Signup.html
@@ -22,13 +22,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
-{% if messages %}
-<ul class="messages alert alert-primary" style="width: 60%; margin: auto; list-style: none;">
-  {% for message in messages %}
-  <li{% if message.tags %} class="{{ message.tags }} " {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+
 
 
 <style>
@@ -38,9 +32,7 @@
     box-sizing: border-box;
   }
 
-  html {
-    overflow-y: scroll;
-  }
+
 
   body {
     background: #c1bdba;
@@ -119,7 +111,6 @@
     left: 13px;
     color: rgba(255, 255, 255, 0.5);
     transition: all 0.25s ease;
-    -webkit-backface-visibility: hidden;
     pointer-events: none;
     font-size: 22px;
   }
@@ -222,9 +213,16 @@
 </style>
 
 <section
-  style="width: 100%; height: 100vh;background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1455849318743-b2233052fcff?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2lnbiUyMHVwfGVufDB8fDB8fHww'); background-size: 100% 100vh; background-repeat: no-repeat; object-fit: contain;">
+  style="width: auto; height: 150vh;background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1455849318743-b2233052fcff?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c2lnbiUyMHVwfGVufDB8fDB8fHww'); background-size: 100% 100%; background-repeat: no-repeat; object-fit: contain;">
 
-  <div class="container" style="margin-top: 70px; padding-top: 100px;">
+  <div class="container" style="margin-top: 20px; padding-top: 100px;">
+    {% if messages %}
+    <ul class="messages alert alert-primary" style="width: 60%; margin: auto; list-style: none;">
+      {% for message in messages %}
+      <li{% if message.tags %} class="{{ message.tags }} " {% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <div class="form">
 
       <ul class="tab-group">
