--- a/CodingIndia/website/templates/website/portfolioproject.html
+++ b/CodingIndia/website/templates/website/portfolioproject.html
@@ -50,6 +50,16 @@
                             {% for i in data.skills.all %}
                             <h6>{{i}}</h6>
                             {% endfor %}
+                            {% if data.urllink %}
+                            <div class="mil-divider mil-divider-left mil-mb-30"></div>
+                            <p class="mil-mb-10">Website Link</p>
+                            <h6 class="mil-mb-15"><a href="{{data.urllink}}">{{data.urllink}}</a></h6>
+                            {% endif %}
+                            {% if data.github %}
+                            <div class="mil-divider mil-divider-left mil-mb-30"></div>
+                            <p class="mil-mb-10">Website Link</p>
+                            <h6 class="mil-mb-15"><a href="{{data.github}}">{{data.github}}</a></h6>
+                            {% endif %}
                         </div>
                     </div>
                     <div class="col-lg-7 col-xl-8">
